--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stories Home</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Welcome to Story App</h1>
+<body class="p-5">
+  <h1>All Stories</h1>
   <ul>
     <li><a href="content/story1/story.html">Story 1</a></li>
     <li><a href="content/story2/story.html">Story 2</a></li>
   </ul>
-
-  <a href="save.html">Go to Saved Stories</a>
 </body>
 </html>
