--- a/save.html
+++ b/save.html
@@ -2,17 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Saved Stories</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <title>Save Page</title>
 </head>
 <body>
-  <h1>Saved Stories</h1>
-  <div id="saved-container"></div>
-
-  <script src="assets/script.js"></script>
-  <script>
-    displaySavedStories();
-  </script>
+  <h2>Save Page</h2>
+  <a href="index.html">Back to Home</a>
 </body>
 </html>
